1.6.2: NvControlledCamera for spectating around the world. Added a specific Main for the benchmark and a Gradle task to execute it.